@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-21T08:27:00Z",
+  "timestamp" : "2022-09-21T16:25:43Z",
   "count_outdated" : 527,
   "uniques_outdated" : 305,
-  "count" : 562,
+  "count" : 561,
   "uniques" : 324,
   "clones" : [
     {
       "timestamp": "2022-09-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
