@@ -1,3 +1,11 @@
+2022-09-21T16:25:43Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3099471641
+* notice: last 14d: unq all: 5 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 305 527 / 324 562
+* notice: next accum: outdated-unq outdated-all / unq all: 305 527 / 324 561
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-07]
+
 2022-09-21T08:27:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3096279779
 * notice: last 14d: unq all: 5 35
